--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ model-viewer {
     height: 100%;
     background-size: 100% 100%;
 	position: absolute;
-    opacity: 0.2;
+    opacity: 0.4;
     top: 0;
 	left: 0;
     z-index: 10;
@@ -48,11 +48,25 @@ model-viewer {
 
 .clock {
     text-align: center;
+    font-size: 3vh;
     width: 100%;
     height: 100%;
     color: red;
 	position: absolute;
     top: 12.5%;
+	left: 0;
+    z-index: 10;
+}
+
+.text {
+    text-align: center;
+    font-size: 4vh;
+    font-style: italic;
+    width: 100%;
+    height: 100%;
+    color: orange;
+	position: absolute;
+    top: 45%;
 	left: 0;
     z-index: 10;
 }
