--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ model-viewer {
     font-style: italic;
     width: 100%;
     height: 100%;
-    color: orange;
+    color: green;
 	position: absolute;
     top: 45%;
 	left: 0;
