--- a/css/styles.css
+++ b/css/styles.css
@@ -61,11 +61,10 @@ model-viewer {
 .text {
     text-align: center;
     font-size: 4vh;
-    font-style: italic;
     width: 100%;
     height: 100%;
-    color: orange;
-	position: absolute;
+    color: lime;
+    position: absolute;
     top: 45%;
 	left: 0;
     z-index: 10;
