--- a/css/styles.css
+++ b/css/styles.css
@@ -70,3 +70,13 @@ model-viewer {
 	left: 0;
     z-index: 10;
 }
+
+.background {
+    width: 100%;
+    height: 100%;
+    background-size: 100% 100%;
+	position: absolute;
+    top: 0;
+	left: 0;
+    z-index: 10;
+}
