--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ model-viewer {
     font-size: 3vh;
     width: 100%;
     height: 100%;
-    color: red;
+    color: blueviolet;
 	position: absolute;
     top: 12.5%;
 	left: 0;
@@ -64,7 +64,7 @@ model-viewer {
     font-style: italic;
     width: 100%;
     height: 100%;
-    color: orange;
+    color: mediumspringgreen;
 	position: absolute;
     top: 45%;
 	left: 0;
