--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ model-viewer {
     height: 100%;
     background-size: 100% 100%;
 	position: absolute;
-    opacity: 0.4;
+    opacity: 0.5;
     top: 0;
 	left: 0;
     z-index: 10;
@@ -42,6 +42,18 @@ model-viewer {
     background-size: 100% 100%;
 	position: absolute;
     top: 0;
+	left: 0;
+    z-index: 10;
+}
+
+.message {
+    text-align: center;
+    font-size: 3vh;
+    width: 100%;
+    height: 100%;
+    color: red;
+	position: absolute;
+    top: 85%;
 	left: 0;
     z-index: 10;
 }
